# mlops-breast-cancer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt
.claude/tasks/: TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-006.md  TASK-007.md  TASK-008.md
.github/workflows/: ci.yml
api/: __init__.py  main.py  schemas.py
docs/: ARCHITECTURE.md  PRD.md  exemplo_payload.json  linkedin_posts.md
docs/adr/: ADR-001-stack.md  ADR-002-fastapi.md  ADR-003-k8s-docker-desktop.md  ADR-004-metrica-recall.md
k8s/: deployment.yaml  service.yaml
models/: MODEL_VERSION
notebooks/: relatorio_final.ipynb
src/mlops_bc/: config.py  data.py  drift.py  train.py  tune.py
tests/: conftest.py  test_api.py  test_data.py  test_drift.py  test_model.py
