[project]
name = "mlops-breast-cancer"
version = "1.0.0"
description = "Pipeline MLOps end-to-end: Breast Cancer Wisconsin -> MLflow -> FastAPI -> Docker -> Kubernetes"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "W"]
ignore = ["S101"]  # assert em testes

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov=api --cov-fail-under=80 -q"
testpaths = ["tests"]
pythonpath = ["src", "."]
